/*
 * $Id: ChangeLog,v 1.2503 2004/03/05 23:34:44 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-07 00:41 UTC+0100 Giancarlo Niccolai <gc [at] niccolai [dot] ws>
  * source/rtl/hbini.prg
    ! Reverted latest changes that completely broke the code.
    
    /* Even the simplest test wasn't running (and cannot ever 
       be running under any condition). So, I don't know what
       the last commiter wanted to achieve, but it was not
       even in the right path to achieve it.
       
       Also, formatting and case was completely mixed up.
       
       So, before commiting, at least test and respect previous
       work.
    */
    
2004-03-05 15:20 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    - Removed redundant hb_itemClear() on basic temp items.

2004-03-06 05:45 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/vm/debug.c
  * source/vm/hvm.c
    % out usage hb_itemNew(NULL)

  * source/vm/garbage.c
    - remove unused variable

  * source/rtl/gtwin/gtwin.c
    % allow users to use normal cursor when HB_GTWIN_NORMAL_CURSOR defined.

2004-03-05 14:44 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    + Added logic to Reset FOR EACH and WITH OBJECT on BREAK if END SEQUENCE is in current procedure.
    + Added logic to Release all FOR EACH if maximum nesting nesting exhausted incase error was handled.
    + Added logic to Release all WITH OBJECT if maximum nesting nesting exhausted incase error was handled.
    + Added logic to test for hb_vm_wWithObjectCounter == 0, incase error was handled, and no object is in scope any longer.
    + Added logic to test for hb_vm_wEnumCollectionCounter == 0, incase error was handled, and no collection is in scope any longer.
    + Added logic to refernce FOR EACH, and WITH OBJECT items in hb_vmIsLocalRef()
