@@ -1,5 +1,5 @@
 /*
- * $Id: gauge.c,v 1.1 2003/03/29 22:40:49 lculik Exp $
+ * $Id: gauge.c,v 1.2 2003/09/11 22:13:23 paultucker Exp $
  */
 
 /*
@@ -77,55 +77,40 @@ static void hb_gaugeUpdate( PHB_ITEM pArray, float fPercent );
 */
 HB_FUNC( GAUGENEW )
 {
-   PHB_ITEM pReturn = hb_itemArrayNew( B_LEN );   /* Create array */
-   PHB_ITEM pItem;
+   HB_ITEM Return, Item;
 
-   pItem = hb_itemPutNL( NULL, ( ISNUM( B_TOP ) ? hb_parni( B_TOP ) : 0 ) );
-   hb_itemArrayPut( pReturn, B_TOP, pItem );
-   hb_itemRelease( pItem );
+   Return.type = HB_IT_NIL;
+   Item.type = HB_IT_NIL;
 
-   pItem = hb_itemPutNL( NULL, ( ISNUM( B_LEFT ) ? hb_parni( B_LEFT ) : 0 ) );
-   hb_itemArrayPut( pReturn, B_LEFT, pItem );
-   hb_itemRelease( pItem );
+   hb_arrayNew( &Return, B_LEN );   /* Create array */
 
-   pItem = hb_itemPutNL( NULL,
-              ( ISNUM( B_BOTTOM ) ?
-                 ( hb_parni( B_BOTTOM ) < hb_parni( B_TOP ) + 2 ?
-                     hb_parni( B_TOP ) + 2 : hb_parni( B_BOTTOM ) ) : 0 ) );
-   hb_itemArrayPut( pReturn, B_BOTTOM, pItem );
-   hb_itemRelease( pItem );
+   hb_arraySetForward( &Return, B_TOP, hb_itemPutNL( &Item, ( ISNUM( B_TOP ) ? hb_parni( B_TOP ) : 0 ) ) );
+   hb_arraySetForward( &Return, B_LEFT, hb_itemPutNL( &Item, ( ISNUM( B_LEFT ) ? hb_parni( B_LEFT ) : 0 ) ) );
 
-   pItem = hb_itemPutNL( NULL,
-              ( ISNUM( B_RIGHT ) ?
-                 ( hb_parni( B_RIGHT ) < hb_parni( B_LEFT ) + 4 ?
-                    hb_parni( B_LEFT ) + 4 : hb_parni( B_RIGHT ) ) : 0 ) );
-   hb_itemArrayPut( pReturn, B_RIGHT, pItem );
-   hb_itemRelease( pItem );
+   hb_itemPutNL( &Item,
+      ( ISNUM( B_BOTTOM ) ?
+         ( hb_parni( B_BOTTOM ) < hb_parni( B_TOP ) + 2 ?
+             hb_parni( B_TOP ) + 2 : hb_parni( B_BOTTOM ) ) : 0 ) );
+   hb_arraySetForward( &Return, B_BOTTOM, &Item );
 
-   pItem = hb_itemPutC( NULL, ( ISCHAR( B_BACKCOLOR ) ? hb_parc( B_BACKCOLOR ) : "W/N" ) );
-   hb_itemArrayPut( pReturn, B_BACKCOLOR, pItem );
-   hb_itemRelease( pItem );
+   hb_itemPutNL( &Item,
+      ( ISNUM( B_RIGHT ) ?
+         ( hb_parni( B_RIGHT ) < hb_parni( B_LEFT ) + 4 ?
+            hb_parni( B_LEFT ) + 4 : hb_parni( B_RIGHT ) ) : 0 ) );
+   hb_arraySetForward( &Return, B_RIGHT, &Item );
 
-   pItem = hb_itemPutC( NULL, ( ISCHAR( B_BARCOLOR ) ? hb_parc( B_BARCOLOR ) : "W+/N" ) );
-   hb_itemArrayPut( pReturn, B_BARCOLOR, pItem );
-   hb_itemRelease( pItem );
+   hb_arraySetForward( &Return, B_BACKCOLOR, hb_itemPutC( &Item, ( ISCHAR( B_BACKCOLOR ) ? hb_parc( B_BACKCOLOR ) : "W/N" ) ));
+   hb_arraySetForward( &Return, B_BARCOLOR, hb_itemPutC( &Item, ( ISCHAR( B_BARCOLOR ) ? hb_parc( B_BARCOLOR ) : "W+/N" ) ) );
 
-   pItem = hb_itemPutL( NULL, !( ISNUM( B_RIGHT ) && 
-                                 ISNUM( B_LEFT ) && 
+   hb_itemPutL( &Item, !( ISNUM( B_RIGHT ) &&
+                                 ISNUM( B_LEFT ) &&
                                  ( hb_parni( B_RIGHT ) < hb_parni( B_LEFT ) + 9 ) ) );
-   hb_itemArrayPut( pReturn, B_DISPLAYNUM, pItem );
-   hb_itemRelease( pItem );
+   hb_arraySetForward( &Return, B_DISPLAYNUM, &Item );
 
-   pItem = hb_itemPutC( NULL, ( ISCHAR( B_BARCHAR ) ? hb_parc( B_BARCHAR ) : ( char * ) '\xdb') );
-   hb_itemArrayPut( pReturn, B_BARCHAR, pItem );
-   hb_itemRelease( pItem );
+   hb_arraySetForward( &Return, B_BARCHAR, hb_itemPutC( &Item, ( ISCHAR( B_BARCHAR ) ? hb_parc( B_BARCHAR ) : ( char * ) '\xdb') ));
+   hb_arraySetForward( &Return, B_PERCENT, hb_itemPutNL( &Item, 0 ) );
 
-   pItem = hb_itemPutNL( NULL, 0 );
-   hb_itemArrayPut( pReturn, B_PERCENT, pItem );
-   hb_itemRelease( pItem );
-
-   hb_itemReturn( pReturn );
-   hb_itemRelease( pReturn );
+   hb_itemReturn( &Return );
 }
 
 /* GaugeDisplay( aGauge ) --> aGauge
